system/cms/themes/pyrocms/css/workless.css
/* ... */
.btn.gray {
  background-color: #bbbbbb;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#cccccc), to(#bbbbbb));
  background-image: -moz-linear-gradient(#cccccc, #bbbbbb);
  background-image: -ms-linear-gradient(#cccccc, #bbbbbb);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #cccccc), color-stop(100%, #bbbbbb));
  background-image: -webkit-linear-gradient(#cccccc, #bbbbbb);
  background-image: -o-linear-gradient(#cccccc, #bbbbbb);
  background-image: linear-gradient(#cccccc, #bbbbbb);
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  border: 1px solid #aaaaaa;
}

.btn.large {
  font-size: 16px;
  line-height: 28px;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
}

.btn.small {
  padding-right: 9px;
  padding-left: 9px;
  font-size: 11px;
}

.btn.disabled {
  background-image: none;
  filter: alpha(opacity=65);
  -khtml-opacity: 0.65;
  -moz-opacity: 0.65;
  opacity: 0.65;
  cursor: default;
}

.btn:disabled {
  background-image: none;
  filter: alpha(opacity=65);
  -khtml-opacity: 0.65;
  -moz-opacity: 0.65;
  opacity: 0.65;
  cursor: default;
}

.btn:active {
  -webkit-grid-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-grid-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);
  grid-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);
}

button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
  padding: 0;
  border: 0;
}

/* Alerts */
.alert {
  width: 100%;
  background-color: rgba(0, 0, 0, 0.15);
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.15)));
  background-image: -moz-linear-gradient(transparent, rgba(0, 0, 0, 0.15));
  background-image: -ms-linear-gradient(transparent, rgba(0, 0, 0, 0.15));
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, transparent), color-stop(100%, rgba(0, 0, 0, 0.15)));
  background-image: -webkit-linear-gradient(transparent, rgba(0, 0, 0, 0.15));
  background-image: -o-linear-gradient(transparent, rgba(0, 0, 0, 0.15));
  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.15));
  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#15000000')";
  background-color: #e6e6e6;
  margin-bottom: 18px;
  padding: 8px 15px;
  color: #333333;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}

.alert p {
  color: #ffffff;
  margin-bottom: 0;
}

.alert p + p {
  margin-top: 5px;
}

.alert.error {
  background-color: #d83a2e;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#e4776f), to(#d83a2e));
  background-image: -moz-linear-gradient(#e4776f, #d83a2e);
  background-image: -ms-linear-gradient(#e4776f, #d83a2e);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e4776f), color-stop(100%, #d83a2e));
  background-image: -webkit-linear-gradient(#e4776f, #d83a2e);
  background-image: -o-linear-gradient(#e4776f, #d83a2e);
  background-image: linear-gradient(#e4776f, #d83a2e);
  border-bottom-color: #b32b21;
}

.alert.warning {
  background-color: #ffd040;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#ffe38d), to(#ffd040));
  background-image: -moz-linear-gradient(#ffe38d, #ffd040);
  background-image: -ms-linear-gradient(#ffe38d, #ffd040);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffe38d), color-stop(100%, #ffd040));
  background-image: -webkit-linear-gradient(#ffe38d, #ffd040);
  background-image: -o-linear-gradient(#ffe38d, #ffd040);
  background-image: linear-gradient(#ffe38d, #ffd040);
  border-bottom-color: #ffc40d;
}

.alert.success {
  background-color: #62bc62;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#97d397), to(#62bc62));
  background-image: -moz-linear-gradient(#97d397, #62bc62);
  background-image: -ms-linear-gradient(#97d397, #62bc62);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #97d397), color-stop(100%, #62bc62));
  background-image: -webkit-linear-gradient(#97d397, #62bc62);
  background-image: -o-linear-gradient(#97d397, #62bc62);
  background-image: linear-gradient(#97d397, #62bc62);
  border-bottom-color: #46a546;
}

.alert.info {
  background-color: #04aef4;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#62cffc), to(#04aef4));
  background-image: -moz-linear-gradient(#62cffc, #04aef4);
  background-image: -ms-linear-gradient(#62cffc, #04aef4);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #62cffc), color-stop(100%, #04aef4));
  background-image: -webkit-linear-gradient(#62cffc, #04aef4);
  background-image: -o-linear-gradient(#62cffc, #04aef4);
  background-image: linear-gradient(#62cffc, #04aef4);
  border-bottom-color: #049cdb;
}

.alert .close {
  float: right;
  margin-top: -4px;
  color: #333333;
  font-size: 20px;
  font-weight: bold;
  text-shadow: 0 1px 0 #ffffff;
  filter: alpha(opacity=20);
  -khtml-opacity: 0.2;
  -moz-opacity: 0.2;
  opacity: 0.2;
}

.alert .close:hover {
  text-decoration: none;
  filter: alpha(opacity=40);
  -khtml-opacity: 0.4;
  -moz-opacity: 0.4;
  opacity: 0.4;
}

.block-message {
  margin-bottom: 18px;
  padding: 14px;
  color: #333333;
  color: #333333
  text-shadow: 0 1px 0 #ffffff;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
}

.block-message p {
  color: #333333;
  margin-right: 30px;
  margin-bottom: 0;
}

.block-message ul {
  margin-bottom: 0;
}
/* ... */

